refactor: change color btn

--- a/public/screens/main/style.css
+++ b/public/screens/main/style.css
@@ -51,6 +51,7 @@
   margin-top: 6px !important;
   letter-spacing: 2px;
   font-size: 15px !important;
+  background: #FFA500 !important;
 }
 
 .no-underline {
