--- a/public/screens/intro/style.css
+++ b/public/screens/intro/style.css
@@ -1,42 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700&display=swap');
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
 
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  border-radius: 16px;
-  width: 80%; /* Could be more or less, depending on screen size */
-
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  margin-top: 0px !important;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
 * {
   margin: 0%;
   padding: 0%;
@@ -45,10 +8,14 @@
 }
 
 .btn {
-  margin-top: 6px !important;
+  margin-top: 9px !important;
   letter-spacing: 2px;
-  font-size: 15px !important;
-  background: #FFA500;
+  font-size: 20px !important;
+  background: #ffbb00 !important;
+}
+
+.btn-gray {
+  background: #444444 !important;
 }
 
 .no-underline {
@@ -69,9 +36,10 @@ body {
 
 .title-container {
   position: absolute;
-  width: 40%;
+  width: 100%;
   height: auto;
-  top: 100%;
+  text-align: center;
+  top: 57%;
   left: 0%;
   transform: translateY(-150%);
 }
@@ -87,15 +55,6 @@ body {
   font-weight: 700;
 }
 
-.title p {
-  text-align: justify;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 400;
-  color: rgb(177, 177, 177);
-  width: 85%;
-  margin: 1rem 0;
-}
-
 .btn {
   padding: 0.5rem 1rem;
   margin-top: 2rem;
@@ -107,6 +66,10 @@ body {
   text-transform: uppercase;
   background-color: rgb(0, 114, 255);
   color: white;
+}
+
+.mode-btn {
+  visibility: hidden;
 }
 
 @media only screen and (max-width: 1085px) {
