--- a/public/screens/main/style.css
+++ b/public/screens/main/style.css
@@ -51,7 +51,7 @@
   margin-top: 6px !important;
   letter-spacing: 2px;
   font-size: 15px !important;
-  background: #FFA500 !important;
+  background: #444444 !important;
 }
 
 .no-underline {
