--- a/public/screens/main/style.css
+++ b/public/screens/main/style.css
@@ -69,9 +69,10 @@ body {
 
 .title-container {
   position: absolute;
-  width: 40%;
+  width: 100%;
   height: auto;
-  top: 100%;
+  text-align: center;
+  top: 20%;
   left: 0%;
   transform: translateY(-150%);
 }
